--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^5.5.1",
     "morgan": "^1.9.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-responsive-carousel": "^3.1.50"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -35,10 +36,12 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "nodemon": "^1.18.11",
+    "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
