--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "morgan": "^1.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-responsive-carousel": "^3.1.50"
+    "react-responsive-carousel": "^3.1.50",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
