--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "start": "node src/index.js",
+    "start": "node index.js",
     "webpack": "webpack-dev-server --open --mode development",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,10 @@
     "react-dom": "^16.8.6",
     "react-responsive-carousel": "^3.1.50",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "mongodb": "^3.3.2",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
