--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.2",
+    "mongoose": "^5.7.7",
     "pug": "^2.0.4"
   },
   "devDependencies": {
