--- a/package.json
+++ b/package.json
@@ -10,22 +10,25 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "pug": "^2.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.10.0",
     "react-responsive-carousel": "^3.1.50",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2",
     "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.9.2",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^2.1.1",
@@ -33,6 +36,8 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
+    "moment-locales-webpack-plugin": "^1.2.0",
+    "nodemon": "^1.19.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
