--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -9,7 +9,10 @@
         }
     ],
     "start_url": "/",
+    "scope": "/",
     "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#ffffff"
+    "theme_color": "#ffa500",
+    "background_color": "#ffffff",
+    "related_applications": [],
+    "prefer_related_applications": false
 }
