--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.10.0",
+    "react-notifications": "^1.6.0",
     "react-responsive-carousel": "^3.1.50",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -29,14 +30,17 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.9.2",
+    "aws-sdk": "^2.674.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.6.0",
     "moment-locales-webpack-plugin": "^1.2.0",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
