Se configuro la notificacion push en el evento de los tiempos

--- a/client/src/public/manifest.json
+++ b/client/src/public/manifest.json
@@ -3,7 +3,12 @@
     "short_name":"Quindiplatanos",
     "icons": [
         {
-            "src":"./images/cerrarSesion.png",
+            "src":"https://quindiplatanos.s3.amazonaws.com/5ec08c82e07c773c4c78e792-logo.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src":"https://quindiplatanos.s3.us-east-2.amazonaws.com/5ec08d5123ed2c3fa55500bf-logo.png",
             "sizes": "512x512",
             "type": "image/png"
         }
