--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "multer": "^1.4.2",
     "nodemon": "^1.19.2",
     "url-loader": "^1.1.2",
+    "web-push": "^3.4.4",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
